@@ -30,10 +30,6 @@
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
     </dependency>
-    <dependency>
-		<groupId>org.jglobus</groupId>
-		<artifactId>JGlobus-Core</artifactId>
-	</dependency>
   </dependencies>
   <build>
     <plugins>
