@@ -1045,4 +1045,19 @@ public class IRODSConnection implements IRODSManagedConnection {
 		return connection;
 	}
 
+	/**
+	 * Set the status to disconnected. This is only used in special
+	 * circumstances, such as when wrapping a socket in an SSL connection when
+	 * doing PAM authentication. These are special occasions where an
+	 * <code>IRODSConnection</code> is created outside of the normal factory.
+	 * <p/>
+	 * For general usage, this method should not called.
+	 * 
+	 * @param connected
+	 *            the connected to set
+	 */
+	void setConnected(boolean connected) {
+		this.connected = connected;
+	}
+
 }
