@@ -147,7 +147,6 @@
 				<artifactId>maven-changelog-plugin</artifactId>
 				<version>1.9.2</version>
 			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
@@ -161,6 +160,18 @@
 	</reporting>
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+					<groupId>org.jglobus</groupId>
+					<artifactId>JGlobus-Core</artifactId>
+					<version>${globus.version}</version>
+					
+					 <exclusions>
+	     				<exclusion>
+					       <groupId>org.springframework</groupId>
+					       <artifactId>spring-core</artifactId>
+					     </exclusion>
+	   				</exclusions>
+				</dependency>
 			<dependency>
 				<groupId>antlr</groupId>
 				<artifactId>antlr</artifactId>
@@ -352,11 +363,7 @@
 				<version>${spring.webmvc.version}</version>
 				<type>pom</type>
 			</dependency>
-			<dependency>
-				<groupId>org.jglobus</groupId>
-				<artifactId>JGlobus-Core</artifactId>
-				<version>${globus.version}</version>
-			</dependency>
+			
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
